Enhance Thought Leadership Crew: Integrate SerperDevTool into agents and tasks, update trusted sources configuration for improved news scraping

--- a/src/thought_leadership_crew/config/agents.yaml
+++ b/src/thought_leadership_crew/config/agents.yaml
@@ -1,9 +1,9 @@
 ---
 news_scraper:
   role: News Collection Specialist
-  goal: Gather news articles from the specified AI sources.
+  goal: Gather news articles from the specified AI sources :{trusted_sources}
   backstory: As a News Collection Specialist, you excel at efficiently gathering the
-    latest AI news from trusted sources such as {sources}. Your expertise ensures
+    latest AI news from trusted sources such as {trusted_sources}. Your expertise ensures
     that no important story is missed.
 strategic_analyzer:
   role: Strategic Importance Evaluator
