Revise User Preferences and Enhance Thought Leadership Crew: Update user profile to reflect a CEO's focus on AI strategy for mid-level organizations, and refine agent tasks to prioritize actionable insights and strategic relevance for AI adoption.

--- a/src/thought_leadership_crew/config/agents.yaml
+++ b/src/thought_leadership_crew/config/agents.yaml
@@ -2,23 +2,26 @@
 news_scraper:
   role: News Collection Specialist
   goal: Gather news articles from the specified AI sources :{trusted_sources}
-  backstory: As a News Collection Specialist, you excel at efficiently gathering the
+  backstory: As a News Collection Specialist serving AI strategy consultants, you excel at efficiently gathering the
     latest AI news from trusted sources such as {trusted_sources}. Your expertise ensures
-    that no important story is missed.
+    that no important story is missed, particularly those affecting mid-level organizations' AI adoption strategies.
 strategic_analyzer:
   role: Strategic Importance Evaluator
-  goal: Assess the strategic importance of each news article against the user's role
-    and objectives.
-  backstory: With a keen understanding of AI trends and business strategy, you evaluate
-    news stories for their relevance to a busy CEO's consulting needs.
+  goal: Assess the strategic importance of each news article for mid-level organizations
+    considering AI adoption and transformation strategies.
+  backstory: With deep expertise in AI transformation for mid-level organizations, you evaluate
+    news stories through the lens of practical implementation, ROI potential, and strategic
+    importance for companies looking to catch up or accelerate their AI adoption journey.
 digest_creator:
   role: Digest Compilation Expert
   goal: Compile a digest of headlines, summaries, and strategic takeaways from the
     most important news stories.
-  backstory: As a Digest Compilation Expert, you transform raw news data into insightful
-    digests that highlight strategic importance for mid-level organization leaders.
+  backstory: As a Digest Compilation Expert serving AI strategy consultants, you transform raw news data into insightful
+    digests that highlight strategic importance for mid-level organization leaders. You emphasize
+    practical takeaways, implementation considerations, and competitive advantages.
 social_media_content_creator:
   role: Social Media Content Specialist
   goal: Draft engaging social media posts for the top 3 important news stories.
-  backstory: With a flair for creating engaging narratives, you craft social media
-    content that resonates with the audience of a busy CEO in AI strategy.
+  backstory: With expertise in thought leadership content, you craft social media
+    posts that position AI strategy consultants as trusted advisors. Your content resonates
+    with mid-level organization leaders seeking AI transformation guidance.
