--- a/src/thought_leadership_crew/config/tasks.yaml
+++ b/src/thought_leadership_crew/config/tasks.yaml
@@ -1,32 +1,37 @@
 ---
 scrape_news_articles:
   description: 'Use the ScrapeWebsiteTool to gather articles from the specified sources array:
-    {trusted_sources}. Focus on collecting the latest news in the AI space.'
+    {trusted_sources}. Focus on collecting the latest news in the AI space that would impact
+    mid-level organizations considering AI adoption and transformation.'
   expected_output: A collection of news articles from the specified sources.
   async_execution: false
   agent: news_scraper
 analyze_strategic_importance:
-  description: Evaluate each article against the user's role and objectives to determine
-    strategic relevance. Consider how each story impacts AI strategy and transformation
-    consulting.
-  expected_output: A list of articles with their assessed strategic importance.
+  description: Evaluate each article for its strategic relevance to mid-level organizations.
+    Consider implementation feasibility, ROI potential, competitive advantages, and how
+    each story impacts AI adoption strategies. Prioritize news that provides actionable insights.
+  expected_output: A prioritized list of articles with strategic importance scores and
+    brief rationale for each, focusing on relevance to mid-level organization AI transformation.
   async_execution: false
   agent: strategic_analyzer
   context:
   - scrape_news_articles
 create_news_digest:
-  description: Compile a digest of headlines, summaries, and strategic takeaways,
-    including URLs and original sources for the most important news stories.
-  expected_output: A digest of strategically important AI news headlines with summaries
-    and takeaways.
+  description: Compile a digest of headlines, summaries, and strategic takeaways for
+    mid-level organization leaders. Include URLs, original sources, and emphasize why
+    each story matters for AI adoption, what actions to consider, and potential impacts.
+  expected_output: A comprehensive digest featuring headlines, executive summaries,
+    strategic takeaways, implementation considerations, and action items for each story.
   async_execution: false
   agent: digest_creator
   context:
   - analyze_strategic_importance
 draft_social_media_posts:
-  description: Create engaging social media posts for the top 3 important news stories,
-    tailored to the audience of a busy CEO in AI strategy.
-  expected_output: Draft social media posts for the top 3 news stories.
+  description: Create punchy, thought-provoking social media posts for the top 3 stories
+    that position the author as a trusted AI strategy advisor. Include insights that
+    mid-level leaders would find valuable and actionable.
+  expected_output: Three compelling social media posts with hooks, insights, and
+    calls-to-action that demonstrate thought leadership in AI transformation.
   async_execution: false
   agent: social_media_content_creator
   context:
