Enhance Thought Leadership Crew: Integrate LLM support into agents, update dependencies in pyproject.toml and uv.lock, and modify .env.example for local Ollama model configuration.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ MODEL=your_model_here
 OPENAI_API_KEY=your_openai_api_key_here
 SERPER_API_KEY=your_serper_api_key_here
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
+USE_OLLAMA_LOCALLY=false
+OLLAMA_MODEL=llama3:latest
+OLLAMA_BASE_URL=http://localhost:11434
